--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
+    "axios": "^0.22.0",
     "bootstrap": "5.1.1",
     "classnames": "^2.3.1",
     "husky": "^7.0.2",
