--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.26",
+    "@types/react-bootstrap-table-next": "^4.0.16",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.22.0",
@@ -24,6 +25,7 @@
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
