--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.26",
     "@types/react-bootstrap-table-next": "^4.0.16",
+    "@types/react-bootstrap-table2-paginator": "^2.1.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.22.0",
@@ -26,6 +27,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
