--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.26",
@@ -18,11 +19,13 @@
     "@types/react-bootstrap-table2-paginator": "^2.1.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
+    "@types/react-select": "^5.0.1",
     "axios": "^0.22.0",
     "bootstrap": "5.1.1",
     "classnames": "^2.3.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.0",
+    "moment": "^2.29.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
@@ -31,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
