Add jwt_decode & NickNameText component

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
+    "@types/jwt-decode": "^3.1.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -25,6 +26,7 @@
     "bootstrap": "5.1.1",
     "classnames": "^2.3.1",
     "husky": "^7.0.2",
+    "jwt-decode": "^3.1.2",
     "lint-staged": "^11.2.0",
     "moment": "^2.29.1",
     "prettier": "^2.4.1",
