--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "task-management-react",
+  "homepage": "https://pc01pc013.github.io/task-management-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -43,6 +44,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -75,5 +78,8 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
