--- a/package.json
+++ b/package.json
@@ -4,44 +4,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-oauth/google": "^0.2.6",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
     "@types/axios": "^0.14.0",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^28.1.6",
     "@types/jwt-decode": "^3.1.0",
     "@types/moment": "^2.13.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-bootstrap": "^0.32.26",
-    "@types/react-bootstrap-table-next": "^4.0.16",
+    "@types/node": "^18.6.2",
+    "@types/react": "^18.0.15",
+    "@types/react-bootstrap": "^0.32.30",
+    "@types/react-bootstrap-table-next": "^4.0.18",
     "@types/react-bootstrap-table2-paginator": "^2.1.2",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.3.1",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^5.0.1",
-    "axios": "^0.22.0",
-    "bootstrap": "5.1.1",
+    "axios": "^0.27.2",
+    "bootstrap": "5.2.0",
     "classnames": "^2.3.1",
-    "husky": "^7.0.2",
+    "husky": "^8.0.1",
     "jwt-decode": "^3.1.2",
-    "lint-staged": "^11.2.0",
-    "moment": "^2.29.1",
-    "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "lint-staged": "^13.0.3",
+    "moment": "^2.29.4",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-select": "^5.1.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
